# simulation

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  Cruiser.cpp  Cruiser.h  Island.cpp  Island.h  Model.cpp  Model.h  README.md  Ship.cpp  Ship.h  Ship_factory.cpp  Ship_factory.h  Sim_object.h  Tanker.cpp  Tanker.h  View.cpp  View.h  controller.cpp  controller.h  cruiser.h  geometry.cpp  geometry.h  island.cpp  island.h  main.cpp  model.cpp  model.h  navigation.cpp  navigation.h  ship.cpp  ship.h  ship_factory.cpp  ship_factory.h  sim_object.h  strings.txt  tanker.h  track_base.cpp  (+5 more)
resources/: Geometry.h  Track_base.cpp  Track_base.h  p4_main.cpp  skeleton_Controller.h  skeleton_Island.h  skeleton_Ship.cpp  skeleton_Ship.h  skeleton_View.cpp
test/: test_exception.cpp  test_show.sh  test_status.sh  test_view.cpp
